tests/final/expect/15__diag__malformed_pp_unterminated_if_chain_no_crash.diag
Diagnostics:
Error: preprocessing failed
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/cases/15__torture__malformed_pp_unterminated_if_chain_no_crash.c:0:0: error: unclosed #if/#ifdef/#ifndef
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/cases/15__torture__malformed_pp_unterminated_if_chain_no_crash.c:0:0: error: unclosed #if/#ifdef/#ifndef
